Added auto complete function to "Where are you going?" screen
Minor changes to "Orders" screen as well

--- a/Lunchly/app/src/main/res/values/strings.xml
+++ b/Lunchly/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
     <string name="app_name">Lunchly</string>
 
+    <string-array name="restaurants">
+        <item>Boloco</item>
+        <item>Bolococo</item>
+        <item>Chipotle</item>
+        <item>Mc Donalds</item>
+        <item>Panera</item>
+        <item>Starbucks</item>
+    </string-array>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_dropoff">DropoffActivity</string>
